--- a/Capstone Report.ipynb
+++ b/Capstone Report.ipynb
@@ -27,6 +27,312 @@
    "source": [
     "I will gather the venue data for the four cities Seoul, New York, Los Angeles and Chicago from Foursquare. Then I will get the all the venues for all 4 cities, I will group them by category and compare how the top 5 category venues across teh cities compare in type and number."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Workflow"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Imports"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np # library to handle data in a vectorized manner\n",
+    "\n",
+    "import pandas as pd # library for data analsysis\n",
+    "pd.set_option('display.max_columns', None)\n",
+    "pd.set_option('display.max_rows', None)\n",
+    "\n",
+    "# !conda install -c conda-forge geopy --yes \n",
+    "from geopy.geocoders import Nominatim # convert an address into latitude and longitude values\n",
+    "\n",
+    "import json # library to handle JSON files\n",
+    "import requests # library to handle requests\n",
+    "from pandas.io.json import json_normalize # tranform JSON file into a pandas dataframe\n",
+    "\n",
+    "# Matplotlib and associated plotting modules\n",
+    "import matplotlib.cm as cm\n",
+    "import matplotlib.colors as colors\n",
+    "\n",
+    "# import k-means from clustering stage\n",
+    "from sklearn.cluster import KMeans\n",
+    "\n",
+    "# !conda install -c conda-forge folium=0.5.0 --yes \n",
+    "import folium # map rendering library"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Retrieve the Data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Cities</th>\n",
+       "      <th>Latitude</th>\n",
+       "      <th>Longitude</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Thessaloniki</td>\n",
+       "      <td>40.640317</td>\n",
+       "      <td>22.935272</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>New York City</td>\n",
+       "      <td>40.712728</td>\n",
+       "      <td>-74.006015</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Los Angeles</td>\n",
+       "      <td>34.053691</td>\n",
+       "      <td>-118.242767</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Chicago</td>\n",
+       "      <td>41.875562</td>\n",
+       "      <td>-87.624421</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          Cities   Latitude   Longitude\n",
+       "0   Thessaloniki  40.640317   22.935272\n",
+       "1  New York City  40.712728  -74.006015\n",
+       "2    Los Angeles  34.053691 -118.242767\n",
+       "3        Chicago  41.875562  -87.624421"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Get the location data\n",
+    "cities = [\"Thessaloniki\" , \"New York City\", \"Los Angeles\", \"Chicago\"]\n",
+    "geolocator = Nominatim(user_agent=\"ny_explorer\")\n",
+    "latitude = []\n",
+    "longitude = []\n",
+    "for i in cities:\n",
+    "    location = geolocator.geocode(i)\n",
+    "    latitude.append(location.latitude)\n",
+    "    longitude.append(location.longitude)\n",
+    "df = pd.DataFrame({'Cities':cities,'Latitude':latitude, 'Longitude':longitude})\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Define Foursquare Credentials and Version\n",
+    "CLIENT_ID = 'RX2OMW2CT0HUGIRTUUMCEWXZS1T2NKANELQURZILTXCH2AX2' # your Foursquare ID\n",
+    "CLIENT_SECRET = 'EIXCEB3II0YKAZ1C1DZF5T4YSFXVMPCCG1LFOHY3Z1GTRXOP' # your Foursquare Secret\n",
+    "VERSION = '20180605' # Foursquare API version"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Thessaloniki\n"
+     ]
+    },
+    {
+     "ename": "KeyError",
+     "evalue": "'groups'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-5-5b1ce9ec57ab>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     42\u001b[0m \u001b[0mLIMIT\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;36m100\u001b[0m \u001b[1;31m# Limit of number of venues returned by Foursquare API\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     43\u001b[0m \u001b[0mradius\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;36m15\u001b[0m   \u001b[1;31m# number of kilometers to expand, limited by Foursquare API limit\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 44\u001b[1;33m \u001b[0mvenues\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mgetNearbyVenues\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mnames\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mdf\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mCities\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mlatitudes\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mdf\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mLatitude\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mlongitudes\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mdf\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mLongitude\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mradius\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mradius\u001b[0m\u001b[1;33m*\u001b[0m\u001b[1;36m1000\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     45\u001b[0m \u001b[0mvenues\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     46\u001b[0m \u001b[0mvenues\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mhead\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m<ipython-input-5-5b1ce9ec57ab>\u001b[0m in \u001b[0;36mgetNearbyVenues\u001b[1;34m(names, latitudes, longitudes, radius)\u001b[0m\n\u001b[0;32m     17\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     18\u001b[0m         \u001b[1;31m# make the GET request\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 19\u001b[1;33m         \u001b[0mresults\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mrequests\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mget\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0murl\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mjson\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m\"response\"\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'groups'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'items'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     20\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     21\u001b[0m         \u001b[1;31m# return only relevant information for each nearby venue\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mKeyError\u001b[0m: 'groups'"
+     ]
+    }
+   ],
+   "source": [
+    "# Get venue ddata for all the cities\n",
+    "def getNearbyVenues(names, latitudes, longitudes, radius=500):\n",
+    "    \n",
+    "    venues_list=[]\n",
+    "    for name, lat, lng in zip(names, latitudes, longitudes):\n",
+    "        print(name)\n",
+    "            \n",
+    "        # create the API request URL\n",
+    "        url = 'https://api.foursquare.com/v2/venues/explore?&client_id={}&client_secret={}&v={}&ll={},{}&radius={}&limit={}'.format(\n",
+    "            CLIENT_ID, \n",
+    "            CLIENT_SECRET, \n",
+    "            VERSION, \n",
+    "            lat, \n",
+    "            lng, \n",
+    "            radius, \n",
+    "            LIMIT)\n",
+    "            \n",
+    "        # make the GET request\n",
+    "        results = requests.get(url).json()[\"response\"]['groups'][0]['items']\n",
+    "        \n",
+    "        # return only relevant information for each nearby venue\n",
+    "        venues_list.append([(\n",
+    "            name, \n",
+    "            lat, \n",
+    "            lng, \n",
+    "            v['venue']['name'], \n",
+    "            v['venue']['location']['lat'], \n",
+    "            v['venue']['location']['lng'],  \n",
+    "            v['venue']['categories'][0]['name']) for v in results])\n",
+    "\n",
+    "    nearby_venues = pd.DataFrame([item for venue_list in venues_list for item in venue_list])\n",
+    "    nearby_venues.columns = ['Postal Code', \n",
+    "                  'Latitude', \n",
+    "                  'Longitude', \n",
+    "                  'Venue', \n",
+    "                  'Venue Latitude', \n",
+    "                  'Venue Longitude', \n",
+    "                  'Venue Category']\n",
+    "    \n",
+    "    return(nearby_venues)\n",
+    "\n",
+    "LIMIT = 100 # Limit of number of venues returned by Foursquare API\n",
+    "radius = 15   # number of kilometers to expand, limited by Foursquare API limit\n",
+    "venues = getNearbyVenues(names=df.Cities, latitudes=df.Latitude, longitudes=df.Longitude, radius=radius*1000)\n",
+    "venues.shape\n",
+    "venues.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "# One hot encodding\n",
+    "venues_onehot = pd.get_dummies(venues[['Venue Category']], prefix=\"\", prefix_sep=\"\")\n",
+    "# add neighborhood column back to dataframe\n",
+    "venues_onehot[\"Postal Code\"] = venues[\"Postal Code\"]\n",
+    "# move neighborhood column to the first column\n",
+    "fixed_columns = [venues_onehot.columns[-1]] + list(venues_onehot.columns[:-1])\n",
+    "venues_onehot = venues_onehot[fixed_columns]\n",
+    "venues_onehot"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "venues_grouped = venues_onehot.groupby('Postal Code').mean().reset_index()\n",
+    "venues_grouped"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Each  neighborhood with top 10 most common venues\n",
+    "\n",
+    "num_top_venues = 10\n",
+    "\n",
+    "for city in venues_grouped['Postal Code']:\n",
+    "    print(\"----\"+city+\"----\")\n",
+    "    temp = venues_grouped[venues_grouped['Postal Code'] == city].T.reset_index()\n",
+    "    temp.columns = ['venue','freq']\n",
+    "    temp = temp.iloc[1:]\n",
+    "    temp['freq'] = temp['freq'].astype(float)\n",
+    "    temp = temp.round({'freq': 2})\n",
+    "    print(temp.sort_values('freq', ascending=False).reset_index(drop=True).head(num_top_venues))\n",
+    "    print('\\n')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#  Run clustering \n",
+    "# set number of clusters\n",
+    "kclusters = 1\n",
+    "\n",
+    "venues_grouped_clustering = venues_grouped.drop('Postal Code', 1)\n",
+    "\n",
+    "# run k-means clustering\n",
+    "kmeans = KMeans(n_clusters=kclusters, random_state=0).fit(venues_grouped_clustering)\n",
+    "\n",
+    "\n",
+    "# neighborhoods_venues_sorted.insert(0, 'Cluster Labels', kmeans.labels_)\n",
+    "\n",
+    "# toronto_merged = neighborhoods\n",
+    "\n",
+    "# # merge toronto_grouped with toronto_data to add latitude/longitude for each neighborhood\n",
+    "# toronto_merged = toronto_merged.join(neighborhoods_venues_sorted.set_index('Postal Code'), on='Postal Code')\n",
+    "\n",
+    "# toronto_merged.head() # check the last columns!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
