Rename Week  4 notebok

--- a/New Brewery in the Twin Cities metro ares (MN).ipynb
+++ b/New Brewery in the Twin Cities metro ares (MN).ipynb
@@ -29,7 +29,7 @@
    "metadata": {},
    "source": [
     "The Foursquare API was used to retrieve the venue data from all the cities in the Twin Cities metro area. A detailed list of all the cities in the metro was retrieved from the https://www.zipcodestogo.com/Minnesota/ webpage. \n",
-    "My assumption is that if a city that does not have as brewery is similar in character (i.e. has similar top venues categories) with a city that has a brewery is a good t"
+    "My assumption is that if a city that does not have as brewery is similar in character (i.e. has similar top venues categories) with a city that has a brewery is a good candidate. Further future analysis that takes into account financial performances of different breweries could help improve the recomndation."
    ]
   }
  ],
