--- a/New Brewery in the Twin Cities metro ares (MN).ipynb
+++ b/New Brewery in the Twin Cities metro ares (MN).ipynb
@@ -12,7 +12,8 @@
    "metadata": {},
    "source": [
     "#### <u> Business goal : identify the best location for a new brewery in the Twin Cities metro area .</u>\n",
-    "The brewery market in Minnesota had exploded ove the last years. The total production of beer doubled in the last decade <sup> 1 </sup>. The twin cities brewey and taproom market is booming but it still has room for more development when compared to other similar metro areas across the US such as Portland, OR, and Denver, CO which have significant more breweries per capita <sup> 1 </sup>. Since I live in the twic cities and I enjoy visiting the breweries I though to use this project and identify which cities in the Twin Cities metro area could be the home to the next brewery. Any number of investors in the ci\n",
+    "The brewery market in Minnesota had exploded ove the last years. The total production of beer doubled in the last decade <sup> 1 </sup>. The twin cities brewey and taproom market is booming but it still has room for more development when compared to other similar metro areas across the US such as Portland, OR, and Denver, CO which have significant more breweries per capita <sup> 1 </sup>. Since I live in the twic cities and I enjoy visiting the breweries I though to use this project and identify which cities in the Twin Cities metro area could be the home to the next brewery. \n",
+    "Any number of investors in the metro area or the brewey market can use this report to inform their decision and limit the number of cities they will investigate further as potential brewery location candidates.\n",
     "\n",
     "<sup> 1 </sup> https://www.mprnews.org/story/2019/05/15/taproom-beer-minnesota-growth-surly"
    ]
